force-app/main/default/objects/IASetIHOrg__c/fields/TrackErrors__c.field-meta.xml
<CustomField>
    <fullName>TrackErrors__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Check this box to log a Help Interaction record when there are configuration or other errors affecting Help Topics</description>
    <inlineHelpText>Check this box to log a Help Interaction record when there are configuration or other errors affecting Help Topics</inlineHelpText>
    <label>Track Errors</label>
    <type>Checkbox</type>
</CustomField>