force-app/main/default/objects/IASetIHOrg__c/fields/TrackInteractions__c.field-meta.xml
<CustomField>
    <fullName>TrackInteractions__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Check this box to enable tracking of user interactions with Improved Help</description>
    <inlineHelpText>Check this box to enable tracking of user interactions with Improved Help</inlineHelpText>
    <label>Track Interactions</label>
    <type>Checkbox</type>
</CustomField>