force-app/main/default/objects/IASetIHOrg__c/fields/UpdateMarkerHours__c.field-meta.xml
<CustomField>
    <fullName>UpdateMarkerHours__c</fullName>
    <defaultValue>0</defaultValue>
    <description>The number of hours from an Improved Help record&apos;s last modified date for which to flag it as updated</description>
    <inlineHelpText>The number of hours from an Improved Help record&apos;s last modified date for which to flag it as updated</inlineHelpText>
    <label>Update Marker Duration</label>
    <precision>3</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>