force-app/main/default/objects/IASetIHOrg__c/fields/UserAdviceCommentLogged__c.field-meta.xml
<CustomField>
    <fullName>UserAdviceCommentLogged__c</fullName>
    <description>Message to present to users when a comment is logged successfully</description>
    <inlineHelpText>Message to present to users when a comment is logged successfully</inlineHelpText>
    <label>DEPRECATED: User Advice Comment Logged</label>
    <length>255</length>
    <type>Text</type>
</CustomField>