force-app/main/default/objects/IASetIHOrg__c/fields/UserAdviceMissingElement__c.field-meta.xml
<CustomField>
    <fullName>UserAdviceMissingElement__c</fullName>
    <description>Text to display to Helped Users when Improved Help is called but Helped Element is missing</description>
    <inlineHelpText>Text to display to Helped Users when Improved Help is called but Helped Element is missing</inlineHelpText>
    <label>DEPRECATED: User Advice Missing Element</label>
    <length>255</length>
    <type>Text</type>
</CustomField>