force-app/main/default/objects/IASetIHOrg__c/fields/UserAdviceMissingTemplate__c.field-meta.xml
<CustomField>
    <fullName>UserAdviceMissingTemplate__c</fullName>
    <description>Text to display to Helped Users when Improved Help is called but Helped Element&apos;s Topic does not specify a valid Template</description>
    <inlineHelpText>Text to display to Helped Users when Improved Help is called but Helped Element&apos;s Topic does not specify a valid Template</inlineHelpText>
    <label>DEPRECATED: User Advice Missing Template</label>
    <length>255</length>
    <type>Text</type>
</CustomField>