force-app/main/default/objects/IASetIHOrg__c/fields/UserAdviceMissingTopic__c.field-meta.xml
<CustomField>
    <fullName>UserAdviceMissingTopic__c</fullName>
    <description>Text to display to Helped Users when Improved Help is called but Helped Element has a missing Topic</description>
    <inlineHelpText>Text to display to Helped Users when Improved Help is called but Helped Element has a missing Topic</inlineHelpText>
    <label>DEPRECATED: User Advice Missing Topic</label>
    <length>255</length>
    <type>Text</type>
</CustomField>