force-app/main/default/objects/IASetIHOrg__c/fields/UserAdvicePrintShelfLife__c.field-meta.xml
<CustomField>
    <fullName>UserAdvicePrintShelfLife__c</fullName>
    <description>Text to include on prinitable views of Help Topics as a warning regarding their limited shelf life</description>
    <inlineHelpText>Text to include on prinitable views of Help Topics as a warning regarding their limited shelf life</inlineHelpText>
    <label>DEPRECATED: User Advice Print Shelf Life</label>
    <length>255</length>
    <type>Text</type>
</CustomField>